// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/dymensionxyz/dymint/settlement/mockserver/proto/settlement";

package settlement;

// The greeting service definition.
service MockSL {
  // Sends a greeting
  rpc GetIndex (SLIndexRequest) returns (SLIndexReply) {}
  rpc SetIndex (SLIndexReply) returns (SLSetIndexResult) {}
  rpc SetBatch (SLSetBatchRequest) returns (SLSetBatchReply) {}
  rpc GetBatch (SLGetBatchRequest) returns (SLGetBatchReply) {}

}

// The request message containing the user's name.
message SLIndexRequest {
  uint64 key = 1;
}

// The response message containing the greetings
message SLIndexReply {
  uint64 index = 1;
}

// The request message containing the user's name.
message SLSetIndex {
  uint64 name = 1;
}

// The request message containing the user's name.
message SLSetIndexResult {
  uint64 name = 1;
}

message SLSetBatchRequest {
  uint64 index = 1;
  bytes batch = 2;
}

message SLSetBatchReply {
  int32 result = 1;
}

message SLGetBatchRequest {
  uint64 index = 1;
}

message SLGetBatchReply {
  uint64 index = 1;
  bytes batch = 2;
}

